--- a/Figuras.html
+++ b/Figuras.html
@@ -5,6 +5,18 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Poligonos</title>
+    <style type="text/css">
+      body {
+        cursor: url(https://i.imgur.com/QpftHmt.png), auto;
+        margin: 0px;
+        overflow: hidden;
+      }
+
+      a {
+        cursor:url(https://i.imgur.com/YATfaoA.png),auto;
+        
+      }
+    </style>
     <style>
       body {
         margin: 0;
@@ -17,7 +29,7 @@
       }
       
       .background {
-        background:transparent;
+        background-image: url('https://i.imgur.com/S6Ecc1V.png');
         background-size: cover;
         background-position: center bottom;
         background-repeat: no-repeat;
@@ -71,7 +83,7 @@ if(typeof jQuery === 'undefined') {
       maxParticles: 100,
       size: 3,
       speed: 0.5,
-      color: '#ff6600',
+      color: '#c43700',
       minDist: 140,
       connectParticles: false
     };
