--- a/Figuras.html
+++ b/Figuras.html
@@ -29,7 +29,7 @@
       }
       
       .background {
-        background-image: url('https://i.imgur.com/S6Ecc1V.png');
+        background: transparent;
         background-size: cover;
         background-position: center bottom;
         background-repeat: no-repeat;
