--- a/Figuras.html
+++ b/Figuras.html
@@ -254,7 +254,7 @@ if(typeof jQuery === 'undefined') {
       $(document).ready(function() {
         $('.canvas').particles({
           connectParticles: true,
-          color: '#ffffff',
+          color: '#cccc66',
           size: 3,
           maxParticles: 80,
           speed: 1.8
