--- a/Figuras.html
+++ b/Figuras.html
@@ -254,8 +254,8 @@ if(typeof jQuery === 'undefined') {
       $(document).ready(function() {
         $('.canvas').particles({
           connectParticles: true,
-          color: '#cccc66',
-          size: 5,
+          color: '#666633',
+          size: 3,
           maxParticles: 80,
           speed: 1.8
         });
