--- a/stream/kasnotas.html
+++ b/stream/kasnotas.html
@@ -3,7 +3,7 @@
 <head>
 <title>DinaZeno-Nuevo</title>
 <script src='https://kastro-59.github.io/Poligonos/stream/js/jquery.min.js'></script>
-<script type="text/javascript" src='https://kastro-59.github.io/Poligonos/stream/js/lunaradio.min2.js'></script>
+<script type="text/javascript" src='https://kastro-59.github.io/Poligonos/stream/js/lunaradio.min.js'></script>
 <style>
  body { margin: 0; }
  div {
