--- a/stream/kasnotas.html
+++ b/stream/kasnotas.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>DinaZeno-Nuevo</title>
-<script src='https://kastro-59.github.io/Poligonos/stream/js/jquery.min.js'></script>
-<script type="text/javascript" src='https://kastro-59.github.io/Poligonos/stream/js/lunaradio.min.js'></script>
+<script src='https://radioplayer.link/stream/js/jquery.min.js'></script>
+<script type="text/javascript" src='https://radioplayer.link/stream/js/lunaradio.min.js'></script>
 <style>
  body { margin: 0; }
  div {
@@ -183,7 +183,7 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
     color4: "#fa225b",
   itunestoken: "1000lIPN",
   metadatatechnic: "stream-icy-meta",
-  ownmetadataurl: "",
+  ownmetadataurl: "https://radioplayer.link/stream/js/stream-icy-meta.php",
   streamurl: "https://stream.zeno.fm/6pfcuhe0mwzuv",
   streamtype: "radiojar",
   icecastmountpoint: "",
