--- a/servidor/data.html
+++ b/servidor/data.html
@@ -4,9 +4,7 @@
 	<meta name="color-scheme" content="light dark">
 </head>
 <body>	
-<div>	
-  <embed src="https://zenoplay.zenomedia.com/api/zenofm/nowplaying/emertvc73mruv/?_rand=/currentsong"width="100%" scale="noscale" height="100%" wmode="transparent" />
-</div>
+<iframe src="https://zenoplay.zenomedia.com/api/zenofm/nowplaying/emertvc73mruv?_=stream-icy-meta.php?" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
 
 
 </body>
