--- a/servidor/index.html
+++ b/servidor/index.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="thr">&nbsp;|&nbsp;</div>
                         <div class="thr">
-                            <a href="index.php?sid=1">
+                            <a href="data.html?sid=1">
                                 History <img border="0" title="History" alt="History" style="vertical-align:middle" src="images/history.png">
                             </a>
                         </div>
