--- a/servidor2/index.html
+++ b/servidor2/index.html
@@ -181,7 +181,7 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
   metadatatechnic: "https://kastro-59.github.io/Poligonos/servidor2/server/index.php?sid=1/stream-icy-meta",
   ownmetadataurl: "",
   streamurl: "https://stream.zeno.fm/emertvc73mruv",
-  streamtype: "shoutcast",
+  streamtype: "shoutcast2",
   icecastmountpoint: "/radio.mp3",
   radionomyid: "",
   radionomyapikey: "",
