--- a/servidor2/index.html
+++ b/servidor2/index.html
@@ -195,7 +195,7 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
   volume: "50",
   debug: "false",
   usestreamcorsproxy: "true", 
-  corsproxy: "https://zenoplay.zenomedia.com",
+  corsproxy: "",
   autoplay:"true",
     });
 </script>         
