--- a/servidor2/index.html
+++ b/servidor2/index.html
@@ -181,20 +181,20 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
   metadatatechnic: "https://kastro-59.github.io/Poligonos/servidor2/server/index.php?sid=1/stream-icy-meta",
   ownmetadataurl: "",
   streamurl: "https://stream.zeno.fm/emertvc73mruv",
-  streamtype: "shoutcast2",
+  streamtype: "radiozeno",
   icecastmountpoint: "/radio.mp3",
   radionomyid: "",
   radionomyapikey: "",
-  radiozenoid: "",
+  radiozenoid: "emertvc73mruv",
   radiojarid: "",
   radiocoid: "",
-  shoutcastpath: "/api/zenofm/nowplaying/emertvc73mruv",
+  shoutcastpath: "",
   shoutcastid: "1",
   streamsuffix: "",
   metadatainterval: "5000",
   volume: "50",
   debug: "false",
-  usestreamcorsproxy: "true", 
+  usestreamcorsproxy: "false", 
   corsproxy: "",
   autoplay:"true",
     });
