--- a/servidor2/server/index.html
+++ b/servidor2/server/index.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="thr">&nbsp;|&nbsp;</div>
                         <div class="thr">
-                            <a href="https://kastro-59.github.io/Poligonos/servidor2/server/?sid=1">
+                            <a href="https://fuendesing.000webhostapp.com/servidor/server/index.php?sid=1">
                                 History <img border="0" title="History" alt="History" style="vertical-align:middle" src="images/history.png">
                             </a>
                         </div>
