--- a/servidor2/server/index.html
+++ b/servidor2/server/index.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="thr">&nbsp;|&nbsp;</div>
                         <div class="thr">
-                            <a href="https://fuendesing.000webhostapp.com/servidor/server/index.php?sid=1">
+                            <a href="https://fuendesing.000webhostapp.com/servidor/server/?emertvc73mruv">
                                 History <img border="0" title="History" alt="History" style="vertical-align:middle" src="images/history.png">
                             </a>
                         </div>
@@ -154,7 +154,7 @@ Password Required" style="vertical-align:middle" src="images/lock.png">
                 <td>Playing Now: </td>
                 <td>
                     <b>
-                        <a href="currentsong?sid=1">The Three Degrees - When Will I See You Again</a>
+                        <a href="https://fuendesing.000webhostapp.com/servidor/server/?emertvc73mruv">The Three Degrees - When Will I See You Again</a>
                     </b>
                 </td>
             </tr>
@@ -172,21 +172,21 @@ Password Required" style="vertical-align:middle" src="images/lock.png">
             }
             var registerOnWindowLoad = function(callback) {
                 if (window.addEventListener) {
-                    window.addEventListener('load', callback, false);
+                    window.addEventListener('load', callback, true);
                 } else {
                     window.attachEvent('onload', callback);
                 }
             };
             registerOnWindowLoad(function() {
                 if (navigator.userAgent.match(/msie|trident/i)) {
-                    $('hdrbox').style.display = 'block';
+                    $('hdrbox').style.display = 'load';
                 }
             });
         </script>
         <script type="text/javascript">
             var registerOnWindowLoad = function(callback) {
                 if (window.addEventListener) {
-                    window.addEventListener('load', callback, false);
+                    window.addEventListener('load', callback, true);
                 } else {
                     window.attachEvent('onload', callback);
                 }
