--- a/servidor2/index.html
+++ b/servidor2/index.html
@@ -178,8 +178,8 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
     color3: "#fc5404",
     color4: "#fa225b",
   itunestoken: "1000lIPN",
-  metadatatechnic: "",
-  ownmetadataurl: "https://fuendesing.000webhostapp.com/servidor/server/index.php?sid=1",
+  metadatatechnic: "https://kastro-59.github.io/Poligonos/servidor2/server/?emertvc73mruv",
+  ownmetadataurl: "",
   streamurl: "https://stream.zeno.fm/emertvc73mruv",
   streamtype: "radiozeno",
   icecastmountpoint: "/radio.mp3",
