--- a/servidor2/index.html
+++ b/servidor2/index.html
@@ -178,7 +178,7 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
     color3: "#fc5404",
     color4: "#fa225b",
   itunestoken: "1000lIPN",
-  metadatatechnic: "https://kastro-59.github.io/Poligonos/servidor2/server/?emertvc73mruv",
+  metadatatechnic: "https://kastro-59.github.io/Poligonos/servidor2/server/home.html",
   ownmetadataurl: "",
   streamurl: "https://stream.zeno.fm/emertvc73mruv",
   streamtype: "radiozeno",
