--- a/servidor2/server/home.html
+++ b/servidor2/server/home.html
@@ -4,6 +4,7 @@
 	<meta name="color-scheme" content="light dark">
 </head>
 <body>	
+	<iframe src="https://zeno.fm/player/radio-fola" width="575" height="250" frameborder="0" scrolling="no"></iframe><a href="https://zeno.fm/" target="_blank" style="display: block; font-size: 0.9em; line-height: 10px;">A Zeno.FM Station</a>
 <iframe src="https://zenoplay.zenomedia.com/api/zenofm/nowplaying/emertvc73mruv" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
 
 
