--- a/api.zenokas/index.html
+++ b/api.zenokas/index.html
@@ -79,7 +79,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-12 col-md-6 text-center call-lyrics">
-                                                <a href="#" class="lyrics" style="" data-target="#modalLyrics">LYRICS</a>
+                                                <a href="#" class="lyrics" style="" data-target="#modalLyrics">VER-LETRA-CANCION</a>
                                             </div>
                                         </div>
                                     </div>
