--- a/PerlaNegra/index.html
+++ b/PerlaNegra/index.html
@@ -7,12 +7,12 @@
  <script src="12.min.js"></script> 
  <script> 
  $("#stream1").repro12({ 
- URL: "https://technoplayerserver.net:8112", 
+ URL: "https://jm8n.net:7020", 
 version: "2", 
 artwork: true, 
 show_listeners: true, 
 logo: "", 
-servertitle: "", 
+servertitle: "DINARAMA-RADIO", 
 autoplay: false 
 }) 
 </script>
