--- a/stream/index.html
+++ b/stream/index.html
@@ -4,7 +4,7 @@
 </head>
 <body> 
       <div align="center">	
-           <iframe src="https://radioplayer.link/stream/?name=Radio-Prueba&bgcolor=1b50c2&textcolor=acdeff&stream=https://stream.zeno.fm/emertvc73mruv.aac" width="650" height="150" autoplay="true" frameborder="0" scrolling="no"></iframe>
+           <iframe src="https://radioplayer.link/stream/?name=Radio-KC&bgcolor=1b50c2&textcolor=acdeff&stream=https://stream.zeno.fm/emertvc73mruv.aac" width="650" height="150" autoplay="true" frameborder="0" scrolling="no"></iframe>
          </div>
 </body>		
 </html>
