--- a/api.LunaZeno/index.html
+++ b/api.LunaZeno/index.html
@@ -22,7 +22,7 @@
   .disc{
   width: 308px;            
   height: 308px;          
-  background: url(https://i.imgur.com/u0QuwFm.png)center no-repeat;
+  background: url(https://i.imgur.com/FCJxb2D.png)center no-repeat;
   background-size: cover;
   position: absolute;
   z-index: -10;
