--- a/api.LunaZeno/index.html
+++ b/api.LunaZeno/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Fuendesin-Nuevo</title>
+<link rel="icon" type="image/png" href="https://kastro-59.github.io/Poligonos/api.zenokas/img/cover.png" />
 <style>
  body { margin: 0; }
  div {
@@ -2448,7 +2449,7 @@ function(e) {
 <center>
  <style> 
    <!-- 
-   body { background:url() repeat-x, url('') }*{ cursor:url(https://i.imgur.com/QpftHmt.png),auto} 
+   body { background:url() repeat-x, url('') }*{ cursor:url(https://kastro-59.github.io/star/CD/QpftHmt.png),auto} 
    -->
 </style>
 </center> 
