--- a/DVDzenoKas/index.html
+++ b/DVDzenoKas/index.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8">
 <title>KC Radio</title>
 <style> #Cgatatrans + div{ visibility: hidden; </style>
-<link rel="icon" type="image/png" href="https://kastro-59.github.io/Poligonos/api.zenokas/img/cover.png" />
-<link rel="stylesheet" href="css/font-awesome.min.css">
-<link rel="stylesheet" href="css/styleK.css">
-<link rel="stylesheet" href="css/styleK5.css">
+<link rel="icon" type="image/png" href="https://kastro-59.github.io/Poligonos/DVDzenoKas/img/cover.png" />
+<link rel="stylesheet" href="https://kastro-59.github.io/Poligonos/DVDzenoKas/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://kastro-59.github.io/Poligonos/DVDzenoKas/css/styleK.css">
+<link rel="stylesheet" href="https://kastro-59.github.io/Poligonos/DVDzenoKas/css/styleK5.css">
 <style type="text/css">   
 		body {
 				cursor: url(https://kastro-59.github.io/star/CD/QpftHmt.png), auto;
@@ -164,8 +164,8 @@ textomes[12]="Dic";
 document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[mes] + " de " + ano + "<br>");
 
 </script><br><br><br><br><br><br><br>
-<script type="text/javascript" src= "js/scriptMio.js"></script>	
-<script type="text/javascript" src= "js/scriptKas.js"></script>
+<script type="text/javascript" src= "https://kastro-59.github.io/Poligonos/DVDzenoKas/js/scriptMio.js"></script>	
+<script type="text/javascript" src= "https://kastro-59.github.io/Poligonos/DVDzenoKas/js/scriptKas.js"></script>
 
 		
 
