--- a/DVDzenoKas/index.html
+++ b/DVDzenoKas/index.html
@@ -77,7 +77,7 @@
         </section>
     </main>
 
-		<div class="a" style="background-image:url(https://kastro-59.github.io/star/CD/N78rys5.png)">
+		<div class="a" style="background-image:url(https://kastro-59.github.io/star/CD/DVD-CD-2023-Player-oscuro.png)">
 		<div class="Kastrostreaming" id="stream1" data-tag="">
 	<div class="Kastrostreaming">
 	<div class="album-cover1" style="background-image: url(&quot;img/logo.png&quot;); background-size: 100% 100%;"></div>
