--- a/DVDzenoKas/index.html
+++ b/DVDzenoKas/index.html
@@ -77,7 +77,7 @@
         </section>
     </main>
 
-		<div class="a" style="background-image:url(https://kastro-59.github.io/star/CD/DVD-CD-2023-Player-oscuro.png)">
+		<div class="a" style="background-image:url(https://kastro-59.github.io/star/CD/DVD-CD-2023-Player.png)">
 		<div class="Kastrostreaming" id="stream1" data-tag="">
 	<div class="Kastrostreaming">
 	<div class="album-cover1" style="background-image: url(&quot;img/logo.png&quot;); background-size: 100% 100%;"></div>
@@ -86,14 +86,14 @@
    <div class="player-ctr"><div class="listeners fa">22</div><div class="album-cover-serv"><div class="social-share-jmd animated">
    <br> <a href="https://www.facebook.com/sharer/sharer.php?u" target="_blank" class="social-link social-link-facebook fa animated" id="aface"></a> <a href="https://twitter.com/home?status=I%27m%20listening" target="_blank" class="social-link social-link-twitter fa animated" id="atwitter">
   </a></div><div class="album-cover animated" style="background-image: url(&quot;img/logo.png&quot;); background-size: 100% 100%;"></div><div class="disc"></div></div><div class="track-info-serv"><div class="track-info-ctr"><div class="marquee"> <span class="artist-name animated">KASTRO-RADIO </span><span> - 
-   </span><span class="songtitle animated">ღ(¯`◕‿◕´¯)(っ◔◡◔)っ ♫ ♪ ♫ Bienvenido a tu Radio ♫ ♪ ♫(っ◔◡◔)っ (¯`◕‿◕´¯)ღ</span></div></div></div><div class="ppBtn play-btn"></div><div class="servertitle">KASTRO-RADIO</div>
+   </span><span class="songtitle animated">♫ ♪ ♫ Bienvenido a tu Radio ♫ ♪ ♫</span></div></div></div><div class="ppBtn play-btn"></div><div class="servertitle">KASTRO-RADIO</div>
    </div>
    <div id="animation">
      <div align="left"><img src="https://kastro-59.github.io/star/CD/fGjoNY4.gif" alt="efec" width="125" height="40"></div>
    </div>
   
    <div id="animation3">
-     <div align="left"><img src="https://kastro-59.github.io/star/CD/TSc5ws2.gif" alt="efec" width="65" height="65"></div>
+     <div align="left"><img src="https://kastro-59.github.io/star/CD/TSc5ws2.gif" alt="efec" width="45" height="45"></div>
    </div>
  
    </div><div class="icons-left-serv">
