--- a/DVDzenoKas/index.html
+++ b/DVDzenoKas/index.html
@@ -172,8 +172,8 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
 <div id="Cgatatrans"></div>
 <script>
 $("#stream1").icast({
-URL: "https://stream.zeno.fm/emertvc73mruv",
-version: "1",
+URL: "https://stream.zeno.fm/emertvc73mruv.aac",
+version: "icecast",
 })
 </script>
 <script language="JavaScript" type="text/javascript">
