--- a/DVDzenoKasF/index.html
+++ b/DVDzenoKasF/index.html
@@ -85,8 +85,8 @@
    
    <div class="player-ctr"><div class="listeners fa">22</div><div class="album-cover-serv"><div class="social-share-jmd animated">
    <br> <a href="https://www.facebook.com/sharer/sharer.php?u" target="_blank" class="social-link social-link-facebook fa animated" id="aface"></a> <a href="https://twitter.com/home?status=I%27m%20listening" target="_blank" class="social-link social-link-twitter fa animated" id="atwitter">
-  </a></div><div class="album-cover animated" style="background-image: url(&quot;img/logo.png&quot;); background-size: 100% 100%;"></div><div class="disc"></div></div><div class="track-info-serv"><div class="track-info-ctr"><div class="marquee"> <span class="artist-name animated">KASTRO-RADIO </span><span> - 
-   </span><span class="songtitle animated">ღ(¯`◕‿◕´¯)(っ◔◡◔)っ ♫ ♪ ♫ Bienvenido a tu Radio ♫ ♪ ♫(っ◔◡◔)っ (¯`◕‿◕´¯)ღ</span></div></div></div><div class="ppBtn play-btn"></div><div class="servertitle">KASTRO-RADIO</div>
+  </a></div><div class="album-cover animated" style="background-image: url(&quot;img/logo.png&quot;); background-size: 100% 100%;"></div><div class="disc"></div></div><div class="track-info-serv"><div class="track-info-ctr"><div class="marquee"> <span class="artist-name animated">KC-RADIO </span><span> - 
+   </span><span class="songtitle animated">ღ(¯`◕‿◕´¯)(っ◔◡◔)っ ♫ ♪ ♫ Bienvenido a tu Radio ♫ ♪ ♫(っ◔◡◔)っ (¯`◕‿◕´¯)ღ</span></div></div></div><div class="ppBtn play-btn"></div><div class="servertitle">KC-RADIO</div>
    </div>
    <div id="animation">
      <div align="left"><img src="https://kastro-59.github.io/star/CD/fGjoNY4.gif" alt="efec" width="125" height="40"></div>
@@ -172,8 +172,8 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
 <div id="Cgatatrans"></div>
 <script>
 $("#stream1").icast({
-URL: "https://stream.zeno.fm/emertvc73mruv",
-version: "1",
+URL: "https://stream.zeno.fm/emertvc73mruv.aac",
+version: "icecast",
 })
 </script>
 <script language="JavaScript" type="text/javascript">
