--- a/DVDzenoKasF2/index.html
+++ b/DVDzenoKasF2/index.html
@@ -5,9 +5,9 @@
 <title>KC Radio</title>
 <style> #Cgatatrans + div{ visibility: hidden; </style>
 <link rel="icon" type="image/png" href="https://kastro-59.github.io/Poligonos/api.zenokas/img/cover.png" />
-<link rel="stylesheet" href="css/font-awesome.min.css">
-<link rel="stylesheet" href="css/styleK.css">
-<link rel="stylesheet" href="css/styleK5.css">
+<link rel="stylesheet" href="https://kastro-59.github.io/Poligonos/DVDzenoKasF2/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://kastro-59.github.io/Poligonos/DVDzenoKasF2/css/styleK.css">
+<link rel="stylesheet" href="https://kastro-59.github.io/Poligonos/DVDzenoKasF2/css/styleK5.css">
 <style type="text/css">   
 		body {
 			background-color: transparent;
@@ -165,8 +165,8 @@ textomes[12]="Dic";
 document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[mes] + " de " + ano + "<br>");
 
 </script><br><br><br><br><br><br><br>
-<script type="text/javascript" src= "js/scriptMio.js"></script>	
-<script type="text/javascript" src= "js/scriptKas.js"></script>
+<script type="text/javascript" src= "https://kastro-59.github.io/Poligonos/DVDzenoKasF2/js/scriptMio.js"></script>	
+<script type="text/javascript" src= "https://kastro-59.github.io/Poligonos/DVDzenoKasF2/js/scriptKas.js"></script>
 
 		
 
