--- a/DVDzenoKas/index.html
+++ b/DVDzenoKas/index.html
@@ -10,7 +10,8 @@
 <link rel="stylesheet" href="https://kastro-59.github.io/Poligonos/DVDzenoKas/css/styleK5.css">
 <style type="text/css">   
 		body {
-				cursor: url(https://kastro-59.github.io/star/CD/QpftHmt.png), auto;
+			background: transparent;	
+			cursor: url(https://kastro-59.github.io/star/CD/QpftHmt.png), auto;
 				
 			  }
 
