--- a/DVDzenoKas/CDzenoKas.html
+++ b/DVDzenoKas/CDzenoKas.html
@@ -102,8 +102,6 @@
 Temas Tocados...</div><div class="row-serv"><div class="history-cover" id="row1" style="background-image: url(&quot;https://is4-ssl.mzstatic.com/image/thumb/Music/v4/80/3b/69/803b6957-5c55-d91b-9dbf-c9e5df110eb7/source/400x400bb.jpg&quot;); background-size: 100% 100%;"></div><div class="history-track-info"><div class="history-songtitle"> Tan enamorados</div><div class="history-artist-name">Ricardo montaner </div></div><div class="rowNum">1</div></div><div class="row-serv"><div class="history-cover" id="row2" style="background-image: url(&quot;https://is1-ssl.mzstatic.com/image/thumb/Music114/v4/60/96/59/609659a5-be54-5e90-0fa3-5de684c7b54c/source/400x400bb.jpg&quot;); background-size: 100% 100%;"></div><div class="history-track-info"><div class="history-songtitle"> Tan bonita</div><div class="history-artist-name">Kikin y los astros </div></div><div class="rowNum">2</div></div><div class="row-serv"><div class="history-cover" id="row3" style="background-image: url(&quot;https://is1-ssl.mzstatic.com/image/thumb/Music114/v4/2a/b0/ed/2ab0ed96-888c-4e9d-8ff8-3f07608b4305/source/400x400bb.jpg&quot;); background-size: 100% 100%;"></div><div class="history-track-info"><div class="history-songtitle"> Lo Que Esta De Moda</div><div class="history-artist-name">Radio Saludos </div></div><div class="rowNum">3</div></div><div class="row-serv"><div class="history-cover" id="row4" style="background-image: url(&quot;https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/19/c2/92/19c29254-fff5-44fe-2b9d-73b52be22dd7/source/400x400bb.jpg&quot;); background-size: 100% 100%;"></div><div class="history-track-info"><div class="history-songtitle"> Take my breath away </div><div class="history-artist-name">Berlin </div></div><div class="rowNum">4</div></div><div class="row-serv"><div class="history-cover" id="row5" style="background-image: url(&quot;https://is5-ssl.mzstatic.com/image/thumb/Music/v4/5f/7c/73/5f7c7325-d47f-3561-61d7-ced84500d246/source/400x400bb.jpg&quot;); background-size: 100% 100%;"></div><div class="history-track-info"><div class="history-songtitle"> Taconeando</div><div class="history-artist-name">Hugo ruiz </div></div><div class="rowNum">5</div></div></div></div>
 
 
-
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 &nbsp;&nbsp; <span id="Clock">12:57:05</span>
 
 
@@ -164,6 +162,9 @@ textomes[12]="Dic";
 document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[mes] + " de " + ano + "<br>");
 
 </script><br><br><br><br><br><br><br>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>   
+<script type="text/javascript" src= "https://kastro-59.github.io/Poligonos/DVDzenoKas/js/bootstrap.min.js"></script>	
 <script type="text/javascript" src= "https://kastro-59.github.io/Poligonos/DVDzenoKas/js/scriptMio.js"></script>	
 <script type="text/javascript" src= "https://kastro-59.github.io/Poligonos/DVDzenoKas/js/scriptKas.js"></script>
 
