--- a/LunaCDzeno/index.html
+++ b/LunaCDzeno/index.html
@@ -164,7 +164,7 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
   googlefont: "Saira+Condensed:wght@100",
   fontratio: "0.5",
   radioname: "Radio KAS",
-  scroll: "true",
+  scroll: "false",
   coverimage: "false",
   usevisualizer: "fake",
   coverstyle: "animated",
